@@ -27,7 +27,7 @@ doctest:
 	buildingspy/development/*.py
 	@rm -f plot.pdf plot.png roomTemperatures.png dymola.log
 
-dist:	clean doctest unittest doc 
+dist:	clean doctest unittest doc
 	@# Make sure README.rst are consistent
 	cmp -s README.rst buildingspy/README.rst
 	python setup.py sdist --formats=gztar,zip
